--- a/CSS/base.css
+++ b/CSS/base.css
@@ -1,14 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
-:root{
-    --font-principal: "Roboto", sans-serif;
-    --font-secundaria: "Oswald", sans-serif;
-    --cor-fundo: #233237;
-    --cor-fundo-claro: #f5f5f5;
-    --cor-texto-claro: #eee;
+:root {
+    --font-primaria: "Segoe UI", sans-serif;
+    --font-secundaria: 'Roboto', sans-serif;
+    --font-enfase: "Monsieur La Doulaise", cursive;
+    --cor-principal: #fdfcf8;
     --cor-texto-escuro: #100f0f;
-    --cor-menu: #253627;
+    --cor-texto-claro: #eee;
+    --cor-hover: #ccc;
+    --cor-hover-texto: #000;
+    --cor-verde-escuro:#114703;
 }
 
 * {
@@ -16,84 +17,88 @@
 }
 
 body {
+    padding: 0;
+    margin: 0;
     display: flex;
     flex-direction: column;
     height: 100vh;
-    background-color: var(--cor-fundo-claro);
-    font-family: var(--font-secundaria);
-    color: var(--cor-texto-escuro);
-    padding: 0;
-    margin: 0;
+    font-family: var(--font-primaria);
+    color: var(--cor-texto);
 }
 
 
-main{
+
+main {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
 }
 
-
-footer{
+footer {
     text-align: center;
-    background-color: var(--cor-fundo);
+    background-color: var(--cor-verde-escuro);
+    padding: 10px;
     color: var(--cor-texto-claro);
-    padding: 20px;
 }
 
-footer .r-linha{
+footer .r-linha {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
 }
 
-footer .r-linha img{
+footer .r-linha-item {
+    width: 400px;
+}
+
+footer .r-linha-item img {
     width: 150px;
     height: auto;
 }
-    
-footer a{
-    text-align: none;
+
+footer .rede-social {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+footer a {
+    text-decoration: none;
     font-size: 30px;
-    color: var(--cor-texto-claro);
+    color: #fff;
     display: flex;
     width: 50px;
     height: 50px;
-    border-radius: 45%;
+    border-radius: 50%;
     justify-content: center;
-    /* align-items: center; */
-    padding: 0;
-    margin: 0;
-    border: 1px solid var(--cor-texto-claro);
+
 }
 
-.r-linha-item{
-    width: 400px;
-    justify-content: center;
-    margin: 0;
-    padding: 0;
-}
-
-.rede-social{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 15px;
-}
-
-.facebook{
+.facebook {
     background-color: blue;
 }
 
-.instagram{
+.instagram {
     background-image: linear-gradient(45deg, #fcb045, #fd1d1d, #833ab4);
 }
 
-.whatsapp{
+.whatsapp {
     background-color: rgb(37, 211, 102);
 }
 
-@media screen and (max-width:400px) {
-    .r-linha-item{
-        width: 100%;
+
+/* Responsividade: Mobile */
+@media screen and (max-width: 900px) {
+    footer a {
+        width: 40px;
+        height: 40px;
+        font-size: 25px;
+
     }
+
 }
