--- a/CSS/baseAdmin.css
+++ b/CSS/baseAdmin.css
@@ -1,1 +1,10 @@
 @import url('base.css');
+
+:root{
+    --cor-menu: #0f4c0e !important;
+    --cor-fonte-menu: #fff !important;
+}
+
+.nav-custom {
+    background-color: var(--cor-menu);
+}
